Fix button text wrapping, add button padding; actually make inputs span whole width of available space

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,15 +21,19 @@ hr {
 
 input {
     border: 1px solid #D2D5DA;
-    padding: 10px;
+    padding: 15px;
     border-radius: 7px;
+    width: 100%;
+    margin-right: 5px;
 }
 
 button {
     border: 1px solid #D2D5DA;
+    padding: 15px;
     background-color: #1D1D1F;
     color: #FFFFFF;
     border-radius: 7px;
+    white-space: nowrap;
 }
 
 /* HEADER / TOP NAV */
